# maxx

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CREDITS.md  Cargo.toml  README.md  README_MALT.md  TODO.md  debug.py  malt-pyproject.toml  matlab.toml.example  pyproject.toml
.github/: CONTRIBUTING.md  copilot-instructions.md  renovate.json5
.github/workflows/: ci.yml  release.yml
docs/: SCHEMA_VALIDATION.md
img/: malt-pixel.afdesign
python/malt/: __init__.py
scripts/: matlab_builtins.py  test_integration.sh
src/: lib.rs  pylib.rs
src/core/: collection.rs  enums.rs  errors.rs  expressions.rs  lint.rs  mod.rs  objects.rs  parser.rs
src/malt/: __init__.py  collect.py  collection.py  enums.py  exceptions.py  expressions.py  mixins.py  objects.py  treesitter.py
src/maxx/: __init__.py  collection.py  config.py  enums.py  expressions.py  livescript.py  logger.py  mixins.py  objects.py  treesitter.py
src/maxx/lint/: README.md  __init__.py  cli.py  config.py  engine.py  rule.py  violation.py
src/maxx/rules/: E001.toml  MW-C001.toml  MW-F001.toml  MW-F002.toml  MW-F003.toml  MW-F004.toml  MW-G001.toml  MW-G002.toml  MW-L001.toml  MW-N001.toml  MW-N002.toml  MW-N003.toml  MW-N004.toml  MW-N005.toml  MW-N006.toml  MW-N007.toml  MW-N008.toml  MW-N009.toml  MW-N010.toml  MW-S001.toml  MW-S002.toml  W001.toml  W002.toml  W003.toml  W004.toml
src/maxx/schemas/: matlab-lint-config.json
tests/: README_TESTS.md  TestMatlabPath.m  __init__.py  conftest.py  rust_tests.rs  test_collect.py  test_collection.py  test_docstring.py  test_docstring_before.py  test_exceptions.py  test_expressions.py  test_init.py  test_integration_maxx_malt.py  test_livescripts.py  test_logger.py  test_matlab_path.m  test_matlab_path.py  test_mixins.py  test_objects.py  test_submodules.py  test_treesitter.py
tests/files/: AbstractClass.m  GetterSetterClass.m  MyClass.m  MyEnum.m  TestClass.m  TestDocstringBefore.m  block_comment_function.m  complex_block_comment.m  malformed.m  multiline_docstring.m  plot_axes.m  pragma_function.m  test_function.m  test_script.m
tests/files/+namespace/: NamespaceClass.m  test_namespace_function.m
tests/files/@ClassFolder/: ClassFolder.m  analyze.m  static_method.m
tests/files/@ClassFolder/private/: private_method.m
tests/files/@double/: inv.m
tests/files/subdir/: subdir_function.m
tests/files/subdir/subsubdir/: nested_function.m
tests/lint_test/: comprehensive_test.m  parameter_test.m  test_file.m
tests/livescripts/: demo_binary.mlx  demo_live.m
