[project]
name = "maxx"
version = "0.0.0" # Automatically patched during release
description = "Signatures for MATLAB projects"
readme = "README.md"
authors = [
    { name = "Mark Hu", email = "watermarkhu@gmail.com" }
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "charset-normalizer~=3.4",
    "griffe~=1.15.0",
    "tree-sitter~=0.25.1",
    "tree-sitter-matlab==1.3.0",
    "loguru~=0.7.3",
    "typing-extensions~=4.0; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "ruff~=0.15.0",
    "pytest~=9.0.0",
    "pytest-cov~=7.0.0",
    "ty~=0.0.1a24",
    "prek~=0.3.0",
]
reference = [
    "beautifulsoup4~=4.14.2",
    "playwright~=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/maxx"]

[tool.uv]
managed = true

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # Python specific errors
    "W",  # Warnings
    "F",  # Pyflakes (code complexity)
    "I",  # isort
]
ignore = [
    "E501",  # Line too long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--color=yes"
